--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
             <div class="year">
                 <div>
                     <h4>YEAR</h4>
-                    <h3 id="year">00</h3>
+                    <h3 id="year">-</h3>
                 </div>
             </div>
             <div class="monthnday">
                 <div class="month time-container">
                     <h4>MONTH</h4>
-                    <h3 id="month">00</h3>
+                    <h3 id="month">-</h3>
                 </div>
                 <div class="day time-container">
                     <h4>DAY</h4>
-                    <h3 id="day">00</h3>
+                    <h3 id="day">-</h3>
                 </div>
             </div>
             <div class="time">
                 <div class="hour time-container">
                     <h4>HOUR</h4>
-                    <h3 id="hour">00</h3>
+                    <h3 id="hour">-</h3>
                 </div>
                 <div class="minute time-container">
                     <h4>MINUTE</h4>
-                    <h3 id="minute">00</h3>
+                    <h3 id="minute">-</h3>
                 </div>
                 <div class="second time-container">
                     <h4>SECOND</h4>
-                    <h3 id="second">00</h3>
+                    <h3 id="second">-</h3>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="days">
             <h4>DAYS</h4>
-            <h3 id="days">00</h3>
+            <h3 id="days">-</h3>
         </div>
 
     </section>
