change to original

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="year">
                 <div class="time-container">
                     <h4>YEAR</h4>
-                    <p id="year">00</p>
+                    <h3 id="year">00</h3>
                 </div>
             </div>
             <div class="monthnday">
