--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <div class="logo">
             <i class="fa-solid fa-heart"></i>
         </div>
+        <div class="message">
+            <h3 class="message-h3">Happy New Year, Ei Lay<h3>
+            <p class="message-p">2021 was a great year and that was all because of you. Plaease be my girlfriend and by my side for the 2022 and also for the many upcoming years.Thank you very much Ei Lay. I do love you. May the upcoming year turn all our dreams into reality.</p>
+        </div>
         <div class="days">
             <h4>DAYS</h4>
             <h3 id="days">00</h3>
